# timestamper-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
app/: Cargo.toml  Dockerfile
app/src/: calc.rs  db_access.rs  main.rs  time_stamp.rs
lib/db_access/: Cargo.toml
lib/db_access/src/: lib.rs
lib/timecard/src/: lib.rs
lib/timestamp/: Cargo.toml
lib/timestamp/src/: lib.rs
