[package]
name = "timestamer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres"] }
chrono = "0.4.33"
csv = "1.3.0"
